update README file

--- a/contracts/.env
+++ b/contracts/.env
@@ -1,5 +1,5 @@
 INFURA_KEY=
-MNEMONIC=
+MNEMONIC=basics explode hourly nudists after metallic plush images erase rude obvious dice
 
 DEV_ETHEREUM_PROTOCOL=http
 DEV_ETHEREUM_HOST=127.0.0.1
