--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "ipfs-http-client": "^46.1.1",
     "js-ipfs": "^0.0.301",
     "react": "^16.13.1",
+    "react-async": "^10.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
