--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -17,11 +17,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "typeRoots": [
       "./@types",
       "./node_modules/@types"
     ],
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src"
