--- a/app/package.json
+++ b/app/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest ./ --runInBand --forceExit",
     "eject": "react-scripts eject",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "abi": "mkdir -p src/abi && ln -f ../contracts/build/contracts/SootRegistry.json src/abi/SootRegistry.json"
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@openzeppelin/test-environment": "^0.1.9",
     "@types/google-map-react": "^1.1.8",
     "@types/googlemaps": "^3.39.13",
     "@types/react-router-dom": "^5.1.5",
@@ -61,6 +62,8 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
-    "prettier": "^2.1.1"
+    "jest": "^26.6.3",
+    "prettier": "^2.1.1",
+    "ts-jest": "^26.4.4"
   }
 }
