--- a/app/package.json
+++ b/app/package.json
@@ -59,11 +59,14 @@
     "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "jest": "^26.6.3",
     "prettier": "^2.1.1",
+    "react-test-renderer": "^17.0.1",
     "ts-jest": "^26.4.4"
   }
 }
