--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://behnamt.github.io/soot",
   "dependencies": {
     "@material-ui/core": "4.11.2",
     "@material-ui/icons": "4.11.2",
@@ -35,7 +36,9 @@
     "test": "jest ./ --runInBand --forceExit",
     "eject": "react-scripts eject",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-    "abi": "mkdir -p src/abi && ln -f ../contracts/build/contracts/SootRegistry.json src/abi/SootRegistry.json"
+    "abi": "mkdir -p src/abi && ln -f ../contracts/build/contracts/SootRegistry.json src/abi/SootRegistry.json",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -64,6 +67,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
+    "gh-pages": "^3.1.0",
     "prettier": "^2.1.1",
     "react-test-renderer": "^17.0.1",
     "ts-jest": "^26.4.4"
