fix mnemonic to bip39 standard - fix deploy script

--- a/contracts/.env
+++ b/contracts/.env
@@ -1,5 +1,5 @@
 INFURA_KEY=
-MNEMONIC=basics explode hourly nudists after metallic plush images erase rude obvious dice
+MNEMONIC=
 
 DEV_ETHEREUM_PROTOCOL=http
 DEV_ETHEREUM_HOST=127.0.0.1
