--- a/app/package.json
+++ b/app/package.json
@@ -31,10 +31,10 @@
     "web3-eth-contract": "^1.2.11"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "test": "jest ./ --runInBand --forceExit",
-    "eject": "react-scripts eject",
+    "eject": "react-app-rewired eject",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "abi": "mkdir -p src/abi && ln -f ../contracts/build/contracts/SootRegistry.json src/abi/SootRegistry.json",
     "predeploy": "yarn build",
@@ -69,6 +69,7 @@
     "eslint-plugin-react": "^7.20.6",
     "gh-pages": "^3.1.0",
     "prettier": "^2.1.1",
+    "react-app-rewired": "^2.1.8",
     "react-test-renderer": "^17.0.1",
     "ts-jest": "^26.4.4"
   }
