--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "homepage": "http://behnamt.github.io/soot",
   "dependencies": {
     "@material-ui/core": "4.11.2",
