--- a/contracts/package.json
+++ b/contracts/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "scripts": {
     "test": "jest --runInBand --forceExit ./tests",
     "test:watch": "jest --watch ./tests",
