--- a/contracts/.env
+++ b/contracts/.env
@@ -1,5 +1,5 @@
 INFURA_KEY=
-MNEMONIC=
+MNEMONIC=double purse volcano satisfy master excess fall essence load entire hen stone degree number myself
 
 DEV_ETHEREUM_PROTOCOL=http
 DEV_ETHEREUM_HOST=127.0.0.1
