--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MNEMONIC=
+MNEMONIC=double purse volcano satisfy master excess fall essence load entire hen stone degree number myself
 NETWORK_ID=5778
 BLOCKTIME=0
