refactor sootRegistry to mint a token while registring - remove cid from report struct since its saved in token - refaactor sootRegistry to be non-upgradable - removed victimIncidentCount since we can retreive it via balanceOf ERC721 - commented methods for now - add a test for registring an incident

--- a/contracts/.openzeppelin/project.json
+++ b/contracts/.openzeppelin/project.json
@@ -1,7 +1,8 @@
 {
   "manifestVersion": "2.2",
   "contracts": {
-    "SootRegistry": "SootRegistry"
+    "SootRegistry": "SootRegistry",
+    "SootToken": "SootToken"
   },
   "dependencies": {},
   "name": "@soot/contracts",
