Integrate OrbitDB into app
- expose nextTokenId from contract
- register a new report with nextTokenId
- store report detail also in orbitDB

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -8,8 +8,8 @@
     "@material-ui/core": "4.11.2",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "@soot/core": "0.1.0",
     "@soot/contracts": "0.1.0",
+    "@soot/core": "0.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -21,6 +21,8 @@
     "ethereum-blockies-base64": "^1.0.2",
     "ipfs": "^0.50.1",
     "ipfs-http-client": "^46.1.1",
+    "orbit-db": "^0.26.0",
+    "orbit-db-docstore": "^1.12.0",
     "react": "^17.0.1",
     "react-async": "^10.0.1",
     "react-dom": "^17.0.1",
