--- a/packages/app/.env
+++ b/packages/app/.env
@@ -2,3 +2,4 @@ REACT_APP_ETHEREUM_NODE='ws://127.0.0.1:7745'
 REACT_APP_SOOT_REGISTRY_CONTRACT_ADDRESS=
 REACT_APP_BING_API_KEY=
 REACT_APP_LOCATION=DE
+REACT_APP_ORBIT_DB_INSTANCE=
