--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,9 +7,12 @@
     "@soot/contracts": "0.1.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/orbit-db": "https://github.com/orbitdb/orbit-db-types.git",
     "eth-crypto": "^1.7.0",
     "ipfs": "^0.50.2",
     "ipfs-http-client": "^47.0.1",
+    "orbit-db": "^0.26.0",
+    "orbit-db-docstore": "^1.12.0",
     "typescript": "^4.1.3",
     "web3": "^1.3.0",
     "web3-core": "^1.3.0",
