--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,6 +9,8 @@
     "@types/node": "^12.0.0",
     "@types/orbit-db": "https://github.com/orbitdb/orbit-db-types.git",
     "eth-crypto": "^1.7.0",
+    "eth-sig-util": "^3.0.0",
+    "ethereumjs-util": "^7.0.7",
     "ipfs": "^0.50.2",
     "ipfs-http-client": "^47.0.1",
     "orbit-db": "^0.26.0",
