--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -59,11 +59,16 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.8",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^26.0.20",
+    "@types/mocha": "^8.2.0",
     "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
@@ -71,6 +76,6 @@
     "prettier": "^2.1.1",
     "react-app-rewired": "^2.1.8",
     "react-test-renderer": "^17.0.1",
-    "ts-jest": "^26.4.4"
+    "ts-jest": "^26.5.0"
   }
 }
